# k2i

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
app/: admin.py  forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_alter_opportunity_options_and_more.py  0003_scholarship_user_applied_opportunities.py  0004_alter_opportunity_options_alter_opportunity_apply_by.py  0005_remove_user_email.py  0006_alter_opportunity_apply_by.py  0007_alter_opportunity_type.py
k2i/: asgi.py  settings.py  urls.py
k2i/k2i/: wsgi.py
templates/: apply_to_internship.html  base.html  home.html  internship_detail.html  internship_details.html  internship_list.html  opportunity_detail.html  opportunity_list.html  profile.html  resource_list.html  scholarship_detail.html  scholarship_list.html  user_profile.html
templates/account/: login.html  logout.html  signup.html
