[tool.poetry]
name = "k2i"
version = "0.1.0"
description = ""
authors = ["Jason <git@jasoncameron.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.0.7"

[tool.poetry.group.dev.dependencies]
ruff = "0.5.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
